# claude-trail

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude_trail.py  feed.py  hook.sh  monitor_transcriptions.sh  pyproject.toml  voice_ptt.py  watch_transcription.sh
.github/workflows/: ci.yml
tests/: conftest.py  test_claude_trail.py  test_feed.py
