[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-trail"
version = "0.5.0"
description = "Observability TUI for Claude Code: a real-time trail of every Bash command Claude Code executes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.15,<0.16"]

[project.scripts]
claude-trail = "claude_trail:main"

[tool.hatch.build.targets.wheel]
include = ["claude_trail.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
